--- a/class/26feb/docker-compose.yaml
+++ b/class/26feb/docker-compose.yaml
@@ -1,10 +1,8 @@
-# docker-compose.yml
 version: '3.8'
 
 services:
   mysql:
     image: mysql:5.7
-    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_DATABASE: wordpress
@@ -17,18 +15,28 @@ services:
 
   wordpress:
     image: wordpress:latest
-    container_name: wordpress
-    ports:
-      - "8080:80"
     environment:
       WORDPRESS_DB_HOST: mysql
       WORDPRESS_DB_USER: wpuser
       WORDPRESS_DB_PASSWORD: wppass
       WORDPRESS_DB_NAME: wordpress
     volumes:
-      - wp_content:/var/www/html/wp-content
+      - wp_content:/var/www/html/wp-content    # Shared uploads
+    expose:
+      - "80"                                    # Internal only
     depends_on:
       - mysql
+    networks:
+      - wordpress-network
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "8080:80"                                # Single entry point
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - wordpress
     networks:
       - wordpress-network
 
